# python-project-49

./: .gitignore  Makefile  README.md  brain-calc.cast  brain-cals.cast  brain-even.cast  brain-gcd.cast  brain-prime.cast  brain-progression.cast  brain_games.py  brain_progression.py  prime_demo.cast  progression_demo.cast  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  sonarcloud.yml
brain_games/: cli.py  engine.py  game_engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
hexlet_code/: engine.py
hexlet_code/games/: calc.py  even.py  gcd.py  prime.py  progression.py
hexlet_code/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
